# Anki-Mate

./: .env  .gitignore  README.md  pyproject.toml  run.py  server.py  test.py
app/: __init__.py  config.py  logger.py
app/anki_clients/: client.py  utils.py
app/models/: aki_dto.py  anki_audio.py  anki_deck_option.py  anki_note.py
src/: main.py  test.py
src/app/: __init__.py  exceptions.py
src/app/anki_clients/: client.py  utils.py
src/app/models/: aki_dto.py  anki_action.py  anki_deck_option.py  anki_field.py  anki_note.py
src/ui/: anki_mate.py
src/ui/models/: input_option.py
src/ui/styles/: ankimate.tcss
ui/: anki_mate.py
